discussion/kv_engine/175088/175088_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Modernize parse_config interface char* to std::string_view

Change-Id: I46b9b7200b9c9850f2a50f49ab0791b52a63d980

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-05-20 08:07:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-20 08:14:36.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46238/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc(88): error C3861: "couchstore_last_os_error": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46238/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17586/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:23: error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
int parse_config(std::string_view conf,
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:67:18: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                 struct config_item items[],
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_server.cc:128:30: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                             struct config_item items[],
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:20:29: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                            struct config_item items[],
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:78:18: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                 struct config_item items[],
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:81:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char key[80];
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:82:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char value[1024];
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:242:29: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                            struct config_item items[],
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:244:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char line[1024];
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17586/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:23:
error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17586/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38847/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/memcached/config_parser.h:66:23:
error: no type named "string_view" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38847/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38847/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7195/ : FAILURE

Compile error at [2022-05-20T08:11:47.283Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7296/ : FAILURE

Compile error at [2022-05-20T08:14:12.813Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7296/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19353/ : FAILURE

Compile error at [2022-05-20T08:10:15.952Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19353/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19700/ : FAILURE

Compile error at [2022-05-20T08:11:31.843Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19700/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18561/ : FAILURE

Compile error at [2022-05-20T08:12:11.708Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18561/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20373/ : FAILURE

Compile error at [2022-05-20T08:09:28.937Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20373/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27756/ : FAILURE

Compile error at [2022-05-20T08:11:55.948Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27756/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16607/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
